syntax = "proto3";

package pb;

option go_package = "dift_backend_go/order-service/proto/pb;pb";

// ส่งไป Driver Service
message PassengerCancelRequest {
  string order_id = 1;
  string user_id = 2;
  int64 timestamp = 3;
}

// รับจาก Driver Service
message DriverCancelResponse {
  string order_id = 1;
  string driver_id = 2;
  string status = 3; // cancelled / failed
  int64 timestamp = 4;
}
